With r72888, when going to network places and double-clicking on a network place, nothing happens.
Right clicking to get menu shows that "open" action is missing. This regression totally defeats the purpose of the "network places" folder.
It used to work (hence the regression).
Accessing the netfolder by directly typing its UNC path is still working, same for accessing with drive letter if mapped.
err:(../../dll/win32/shell32/wine/shellord.c:1244) Initializing shell cabinet settings
|
shellbrowser.cpp:1084: Unexpected failure 80004005.
|
(../../dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
|
fixme:(../../dll/win32/comctl32/toolbar.c:380) [001000F4] TBSTYLE_REGISTERDROP not implemented
|
fixme:(../../dll/win32/comctl32/toolbar.c:380) [000D0104] TBSTYLE_REGISTERDROP not implemented
|
fixme:(../../dll/win32/comctl32/toolbar.c:5412) hwnd=000D0104 wParam 00000001 lParam 00000000
|
fixme:(../../dll/win32/wtsapi32/wtsapi32.c:289) Stub 00000000 0x00000000 8 00F0F268 00F0F264
|
WARNING: WSHIoctl at ../../dll/win32/wshtcpip/wshtcpip.c:354 is UNIMPLEMENTED!
|
(../../dll/win32/wshtcpip/wshtcpip.c:356) Ioctl: Unknown IOCTL code: 1074033791
|
fixme:(../../dll/win32/shlwapi/url.c:2514) stub
|
(../../win32ss/user/ntuser/winpos.c:3309) err: NtUserSetWindowPos bad window handle!
|
fixme:(../../dll/win32/browseui/travellog.cpp:248) CTravelLog::Initialize using hardcoded fMaximumSize.
|
WARNING: NtUserLockWindowUpdate at ../../win32ss/user/ntuser/ntstubs.c:978 is UNIMPLEMENTED!
|
(../../ntoskrnl/fsrtl/unc.c:290) FsRtlRegisterUncProvider(B180073C, \Device\VBoxMiniRdr, 0)
|
(../../ntoskrnl/fsrtl/unc.c:301) DFS is not disabled. Going through MUP
|
(../../ntoskrnl/mm/ARM3/sysldr.c:176) Loading: \SystemRoot\system32\drivers\mup.sys at F3E05000 with 15 pages
|
WARNING: DfsDriverEntry at ../../drivers/filesystems/mup/dfs.c:122 is UNIMPLEMENTED!
|
(../../drivers/filesystems/mup/mup.c:2220) Opening MUP
|
(../../ntoskrnl/fsrtl/unc.c:146) FsRtlpRegisterProviderWithMUP(000004D0, \Device\VBoxMiniRdr, 0)
|
(../../drivers/filesystems/mup/mup.c:1135) RegisterUncProvider(B12CE468, B1346658)
|
(../../drivers/filesystems/mup/mup.c:1257) UNC provider \Device\VBoxMiniRdr registered
|
(../../sdk/lib/rtl/path.c:682) RtlQueryEnvironmentVariable_U returned 0xc0000100
|
err:(../../dll/win32/shell32/wine/changenotify.c:284) _OpenDirectory failed for <unknown>
|
travellog.cpp:404: Unexpected failure 80070057.
|
travellog.cpp:404: Unexpected failure 80070057.
|
fixme:(../../dll/win32/wtsapi32/wtsapi32.c:289) Stub 00000000 0x00000000 8 00F0F268 00F0F264
|
WARNING: WSHIoctl at ../../dll/win32/wshtcpip/wshtcpip.c:354 is UNIMPLEMENTED!
|
(../../dll/win32/wshtcpip/wshtcpip.c:356) Ioctl: Unknown IOCTL code: 1074033791
|